Bug 212933 - There is no sound on headphone ALC295, Asus ux430ua
Summary: There is no sound on headphone ALC295, Asus ux430ua
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-03 15:01 UTC by Barud
Modified: 2021-05-04 08:21 UTC (History)
2 users (show)

See Also:
Kernel Version: 5.11.16
Subsystem:
Regression: No
Bisected commit-id:


Attachments
outout of alsa-info.sh (41.76 KB, text/plain)
2021-05-03 15:01 UTC, Barud
Details
Test fix patch (1.87 KB, patch)
2021-05-03 18:15 UTC, Takashi Iwai
Details | Diff
the same patch rebased to 5.11 (created by jforbes) (1.87 KB, patch)
2021-05-04 00:21 UTC, Barud
Details | Diff

Description Barud 2021-05-03 15:01:21 UTC
Created attachment 296603 [details]
outout of alsa-info.sh

Hello,

There is no sound through headphone of my ALC295. 
I am on fedora 34. I have noticed the no sound since f33. I have tried many options, reported to askfedora (https://ask.fedoraproject.org/t/no-sound-in-headphone-speaker-works-fine/11101) also, but with partial solutions only.


Though I am using Linux for 15 years, I mostly work as enduser, so I may not know exactly what info you need, I am attaching those I have done before.


cat /proc/asound/card0/codec* | \grep Codec
Codec: Realtek ALC295
Codec: Intel Kabylake HDMI


The partial solution I have achived is by adding 

`options snd-hda-intel model=asus-zenbook`

to /etc/modprob.d/sound.conf 

The problem is it is not stable (I have to plugin-plugout the jack and play with speaker sound before I get the sound in headphone, and also, the sound only stays at peak, cant lower the sound.), may be like bug #212641.


I have tried #195457 but that doesnt seem to have any effect. 


Kindly have a look.

NB: Fedora 34 used Pipewire instead of pulseaudio, if that helps.
Comment 1 Barud 2021-05-03 15:16:51 UTC
Sorry, buy I have missed this:

lspci|\grep Audio
00:1f.3 Audio device: Intel Corporation Sunrise Point-LP HD Audio (rev 21)
Comment 2 Takashi Iwai 2021-05-03 15:21:25 UTC
Is it only about the headphone, and the speaker works as expected?
Comment 3 Barud 2021-05-03 16:16:22 UTC
Dear Takashi Iwai,
Yes. 
The inbuilt speaker is working as expected. No sound in headphone only.
Comment 4 Barud 2021-05-03 18:04:39 UTC
I am not sure if I am giving unnecessary data (and missing the necessary one), but, in a similar topic, they have asked for this info too:
sudo fuser -v /dev/snd/* 
                     USER        PID ACCESS COMMAND
/dev/snd/controlC0:  root        741 f.... alsactl
                     rudra      1616 F.... pipewire-media-
/dev/snd/seq:        rudra      1610 F.... pipewire
Comment 5 Takashi Iwai 2021-05-03 18:15:41 UTC
(In reply to Barud from comment #3)
> Dear Takashi Iwai,
> Yes. 
> The inbuilt speaker is working as expected. No sound in headphone only.

OK, then could you try the patch below?
Comment 6 Takashi Iwai 2021-05-03 18:15:58 UTC
Created attachment 296611 [details]
Test fix patch
Comment 7 Barud 2021-05-03 18:35:51 UTC
patch to which file?

just `patch -b asus-dac-fixup.diff`?

Kindly let me know.
Comment 8 Barud 2021-05-03 18:37:16 UTC
Also, should I remove the /etc/modprobe.d/sound.conf before applying the patch?
Comment 9 Barud 2021-05-04 00:19:04 UTC
Dear Takasshi,

The patch worked. 

In my humble i5 machine it took around 3 hours to compile. 
I didn't had any idea...basically I blindly followed jforbes (fedora kernel maintainer) for that.

One thing is not your exact file, but jforbes gave me a modified version. 

Thanks a lot. I am attaching the modified version.
Comment 10 Barud 2021-05-04 00:21:30 UTC
Created attachment 296623 [details]
the same patch rebased to 5.11 (created by jforbes)
Comment 11 Takashi Iwai 2021-05-04 08:21:31 UTC
Good to hear.  The fix patch is now submitted and will be merged to the upstream.
Likely landed in the upstream 5.13-rc1 kernel in the next week.

Note You need to log in before you can comment on or make changes to this bug.